--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,4 +1,4 @@
 info:
-  description: Spring Cloud DEV Samples
+  description: Spring Cloud DEV1 Samples
   url: https://github.com/spring-cloud-samples
 
