--- a/test-config-client.yml
+++ b/test-config-client.yml
@@ -1,3 +1,3 @@
 info:
-  description: Spring Cloud Samples
+  description: Spring Cloud TEST Samples
   url: https://github.com/spring-cloud-samples
