--- a/test-config-client-dev.yml
+++ b/test-config-client-dev.yml
@@ -1,3 +1,3 @@
 info:
-  description: Spring Cloud DEV1 Samples
+  description: Spring Cloud DEV1 TEST Samples
   url: https://github.com/spring-cloud-samples
